--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		let submit = document.getElementById("submit");
 
 		window.addEventListener('load', () => {
-			document.getElementById("user_name").value = tg.InitDataUnsafe.first_name
+			document.getElementById("user_name").value = tg.initDataUnsafe.first_name
 		});
 		
 	</script>
