--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
 		let submit = document.getElementById("submit");
 
 		window.addEventListener('load', () => {
-			document.getElementById("user_name").value = tg.initDataUnsafe.user.first_name + " " + tg.initDataUnsafe.user.last_name;
+			let space = " "*Number(Boolean(tg.initDataUnsafe.user.last_name.length))
+			document.getElementById("user_name").value = tg.initDataUnsafe.user.first_name + space + tg.initDataUnsafe.user.last_name;
 		});
 		
 	</script>
