--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
 			let space = Boolean(tg.initDataUnsafe.user.last_name.length) && " " || "";
 			document.getElementById("user_name").value = tg.initDataUnsafe.user.first_name + space + tg.initDataUnsafe.user.last_name;
 		});
+
+		submit.addEventListener('click', () => {
+			tg.close();
+		});
+
 		
 	</script>
 </body>
