--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 		<input type="text" placeholder="Фамилия" id="user_surname" required>
 		<input type="text" placeholder="Отчество" id="user_dadname">
 		<input type="email" placeholder="Почта" id="user_email" required>
-		<input type="tel" placeholder="Телефон" inputmode="numeric" id="user_phone" required>
+		<input type="tel" placeholder="Телефон" inputmode="numeric" pattern="[8]{1} [0-9]{3}-[0-9]{3}-[0-9]{4}" id="user_phone" required>
+		<div id="error"></div>
 		<button id="submit">Отправить</button>
 	</form>
 
@@ -98,12 +99,39 @@
 		let submit = document.getElementById("submit");
 		tg.expand();
 
+		const EMAIL_REGEXP = /^(([^<>()[\].,;:\s@"]+(\.[^<>()[\].,;:\s@"]+)*)|(".+"))@(([^<>()[\].,;:\s@"]+\.)+[^<>()[\].,;:\s@"]{2,})$/iu;
+
+		function isEmailValid(value) {
+			return EMAIL_REGEXP.test(value);
+		}
+
 		submit.addEventListener('click', () => {
 			let user_firstname = document.getElementById("user_firstname").value;
 			let user_surname = document.getElementById("user_surname").value;
 			let user_dadname = document.getElementById("user_dadname").value;
 			let user_email = document.getElementById("user_email").value;
 			let user_phone = document.getElementById("user_phone").value;
+
+			if (user_firstname.length < 1) {
+				document.getElementById("error").innerText = "Ошибка в имени";
+				return;
+			}
+
+			if (user_surname.length < 2) {
+				document.getElementById("error").innerText = "Ошибка в фамилии";
+				return;
+			}
+
+			if (!isEmailValid(user_email.length)) {
+				document.getElementById("error").innerText = "Ошибка в почте";
+				return;
+			}
+
+			if (user_firstname.phone < 10) {
+				document.getElementById("error").innerText = "Ошибка в телефоне";
+				return;
+			}
+
 
 			let data = {
 				firstname: user_firstname,
