--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 </head>
 <body>
-	<h2>Регестрация</h2>
+	<h2>Регистрация</h2>
 	<form id="form">
 		<input type="text" placeholder="Имя" id="user_firstname" required>
 		<input type="text" placeholder="Фамилия" id="user_surname" required>
